--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -11,6 +11,17 @@
   overflow: hidden;
 }
 
+@media screen and (max-width: 700px) {
+  .post-container {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .post-container {
+    width: 80%;
+  }
+}
+
 /* top part  */
 .post-user {
   display: flex;
@@ -41,13 +52,15 @@
 
 .change-view {
   width: 55%;
+  margin-right: 2rem;
   /* border: 1px solid black; */
 }
 .ul-change-view {
   /* border: 1px solid black; */
-  width: 100%;
   display: flex;
+  width: 100%;
   justify-content: space-around;
+  /* justify-content: center; */
 }
 
 /* content */
