--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -3,22 +3,22 @@
   flex-direction: column;
   /* border: 1px solid black; */
   border-radius: 5px;
-  width: 40vw;
+  width: 90%;
   /* height: 5  0vh; */
   margin: 3rem auto;
-  box-shadow: 0 1px 1px 2px rgb(196, 195, 195);
+  box-shadow: var(--box-shadow-primary);
   background: white;
   overflow: hidden;
 }
 
-@media screen and (max-width: 700px) {
+/* @media screen and (max-width: 700px) {
   .post-container {
     width: 60%;
   }
-}
-@media screen and (max-width: 500px) {
+} */
+@media screen and (max-width: 800px) {
   .post-container {
-    width: 80%;
+    width: 100%;
   }
 }
 
