--- a/client/src/components/profilePage/add-recipe/addIngredients/ingredientadd.css
+++ b/client/src/components/profilePage/add-recipe/addIngredients/ingredientadd.css
@@ -1,8 +1,3 @@
-.add-recipe-container {
-  width: 50%;
-  /* margin: 5rem 3rem; */
-}
-
 .action-btn-recipe-add {
   display: flex;
   /* border: 1px solid black; */
@@ -12,4 +7,11 @@
 
 .action-btn-recipe-add > * {
   margin: 0 1rem;
+  /* margin: auto; */
+}
+
+.ingredients-recipe {
+  margin: auto 1rem;
+  width: 95%;
+  /* box-shadow: 0px 2rem 3rem rgba(0, 0, 0, 0.2); */
 }
