--- a/client/src/components/profilePage/add-recipe/addInstructions/instructions.css
+++ b/client/src/components/profilePage/add-recipe/addInstructions/instructions.css
@@ -1,8 +1,8 @@
 .instructions-recipe {
-  flex: 1;
-  width: 40vw;
-  margin: 0 1rem;
-}
-.input-edit {
-  text-align: left;
+  /* flex: 1; */
+  width: 95%;
+  /* margin: auto; */
+  /* margin: 0.5rem 2rem 2rem; */
+  box-shadow: 0px 2rem 3rem rgba(0, 0, 0, 0.2);
+  margin: auto 2rem;
 }
