--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@
   --bg-navbar-color: #ff0854;
   --weak-line-color: rgba(200, 200, 200, 0.895);
   --box-shadow-primary: 0 1px 1px 2px rgb(196, 195, 195);
+  --box-shadow-secondary: 0 3px 15px 8px rgb(163, 160, 160);
 }
 
 body {
