--- a/client/src/components/signin/passMeter.css
+++ b/client/src/components/signin/passMeter.css
@@ -1,7 +1,19 @@
+.password-meter-container {
+  display: flex;
+  /* flex-direction: column; */
+  /* align-items: center; */
+  justify-content: center;
+  /* border: 1px solid black; */
+}
 meter {
-  margin: auto;
+  /* margin: auto; */
+  /* border: 1px solid black; */
   width: 10rem;
   height: 1.5rem;
+}
+#password-strength-text {
+  font-weight: bold;
+  /* text-align: center; */
 }
 
 meter[value="1"]::-webkit-meter-optimum-value {
