--- a/client/src/components/topBar/topbar.css
+++ b/client/src/components/topBar/topbar.css
@@ -6,7 +6,7 @@
   /* align-items: center; */
   background-color: var(--bg-navbar-color);
   box-shadow: 20px 20px 50px 10px pink inset;
-  overflow: hidden;
+  /* overflow: hidden; */
   position: sticky;
   top: 0;
   z-index: 100000;
@@ -129,4 +129,9 @@
   width: 50;
   height: 50px;
   border-radius: 50%;
+  cursor: pointer;
+}
+
+.container-left-icons-menu {
+  position: relative;
 }
