--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -1,3 +1,10 @@
+@media screen and (max-width: 800px) {
+  .post-container {
+    width: 100%;
+  }
+}
+
+/* PC */
 .post-container {
   display: flex;
   flex-direction: column;
@@ -16,11 +23,6 @@
     width: 60%;
   }
 } */
-@media screen and (max-width: 800px) {
-  .post-container {
-    width: 100%;
-  }
-}
 
 /* top part  */
 .post-user {
@@ -84,6 +86,23 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  /* padding-top: 5px; */
+}
+
+.title-catagroy-container {
+  display: flex;
+  align-items: center;
+  /* border: 1px solid black; */
+}
+.title-catagroy-container h1 {
+  margin: 0;
+}
+.title-catagroy-container span {
+  /* margin: 0; */
+  margin-left: 10px;
+  align-self: flex-end;
+  font-weight: bold;
+  color: rgb(91, 89, 89);
 }
 
 .active-view {
