--- a/client/src/components/profilePage/add-recipe/addIngredients/ingredientadd.css
+++ b/client/src/components/profilePage/add-recipe/addIngredients/ingredientadd.css
@@ -11,7 +11,8 @@
 }
 
 .ingredients-recipe {
-  margin: auto 1rem;
-  width: 95%;
+  margin: auto;
+  width: 100%;
+  /* box-shadow: var(); */
   /* box-shadow: 0px 2rem 3rem rgba(0, 0, 0, 0.2); */
 }
