--- a/client/src/components/profilePage/add-recipe/addInstructions/instructions.css
+++ b/client/src/components/profilePage/add-recipe/addInstructions/instructions.css
@@ -1,8 +1,9 @@
 .instructions-recipe {
   /* flex: 1; */
-  width: 95%;
+
+  width: 100%;
   /* margin: auto; */
   /* margin: 0.5rem 2rem 2rem; */
-  box-shadow: 0px 2rem 3rem rgba(0, 0, 0, 0.2);
-  margin: auto 2rem;
+  /* box-shadow: 0px 2rem 3rem rgba(0, 0, 0, 0.2); */
+  /* margin: auto 2rem; */
 }
