--- a/client/src/components/topBar/topbar.css
+++ b/client/src/components/topBar/topbar.css
@@ -112,7 +112,7 @@
   }
 
   .topbar-user div {
-    width: 50%;
+    /* width: 50%; */
     height: 100%;
     /* background-color: aliceblue; */
   }
