added recipes page

--- a/client/src/components/profileOthers/otherPosts/friendposts.css
+++ b/client/src/components/profileOthers/otherPosts/friendposts.css
@@ -4,17 +4,37 @@
   display: flex;
   justify-content: center;
 }
-.add-friend-btn {
-  width: 15rem;
+.add-friend-btn,
+.cancle-friend-btn {
+  min-width: 15rem;
   background-color: #e83ea9;
   margin-top: 3rem;
-  padding: 1rem;
+  padding: 1rem 2rem;
   border-radius: 10px;
   box-shadow: var(--box-shadow-primary);
   border: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  font-weight: bold;
+}
+
+.cancle-friend-btn {
+  background-color: #e83eaace;
+  color: rgba(0, 0, 0, 0.568);
+}
+
+.add-friend-btn > *,
+.cancle-friend-btn > * {
+  margin: 0 2rem;
+}
+
+.add-friend-btn :hover {
+  background-color: #e83eaace;
+}
+.cancle-friend-btn:hover {
+  background-color: #e83ea9;
+  color: black;
 }
 
 .my-posts-container {
