--- a/client/src/components/profileOthers/coverOthers/coverOther.css
+++ b/client/src/components/profileOthers/coverOthers/coverOther.css
@@ -45,6 +45,16 @@
   position: relative;
 }
 
+.other-profile-logo {
+  max-height: 5rem;
+  cursor: pointer;
+  transition: all ease-in 0.2s;
+}
+
+.other-profile-logo:hover {
+  transform: scale(1.02);
+}
+
 @media screen and (max-width: 700px) {
   .cover-container {
     height: 30vh;
