--- a/client/src/components/topBar/topbar.css
+++ b/client/src/components/topBar/topbar.css
@@ -5,7 +5,7 @@
   width: 100vw;
   /* align-items: center; */
   background-color: var(--bg-navbar-color);
-  box-shadow: 20px 20px 50px 10px pink inset;
+  box-shadow: var(--box-shadow-nav);
   /* overflow: hidden; */
   position: sticky;
   top: 0;
