--- a/client/src/components/profilePage/my-friends/myfriends.css
+++ b/client/src/components/profilePage/my-friends/myfriends.css
@@ -2,27 +2,63 @@
   width: 90vw;
   margin: 3rem auto;
   min-height: 300px;
-  /* border: 1px solid black; */
+
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
 
-  background-image: linear-gradient(
-    white,
-    pink,
-    white,
-    pink,
-    white,
-    pink,
-    pink,
-    white,
-    white,
-    white,
-    pink,
-    white,
-    white
-  );
+  /* background-image: linear-gradient(white, pink, white, white, white, pink, white, white); */
   box-shadow: var(--box-shadow-nav);
   border-radius: 10px;
+}
+
+.friends-cards-container {
+  display: flex;
+  gap: 3rem;
+  width: 95%;
+  margin: auto;
+  height: 100%;
+  /* border: 1px solid black; */
+}
+
+.my-friends-title {
+  margin-top: 12rem;
+  /* align-self: center; */
+  /* border: 1px solid black; */
+  font-size: 3rem;
+  text-align: center;
+}
+
+.friend-card {
+  width: 15vmin;
+  min-width: 150px;
+  /* height: 15vmin; */
+  min-height: fit-content;
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  background-color: WHITE;
+  /* justify-content: center; */
+  box-shadow: var(--box-shadow-primary);
+  color: black;
+  transition: all 0.2s ease-in;
+}
+
+.friend-card:hover {
+  transform: scale(1.05);
+}
+
+.friend-card img {
+  align-self: center;
+  margin-left: calc(50% - 40px);
+  max-height: 80px;
+  max-width: 80px;
+}
+
+.friend-card-content {
+  /* border: 1px solid black; */
+  background-color: rgba(175, 175, 175, 0.618);
+  padding: 0.5rem 1rem;
+  border-radius: 0 0 10px 10px;
 }
