--- a/client/src/components/profilePage/my-recepies/big-recipe/recipezoom.css
+++ b/client/src/components/profilePage/my-recepies/big-recipe/recipezoom.css
@@ -7,6 +7,7 @@
   padding: 3px;
   width: 95%;
   margin: 10px auto;
+  min-width: fit-content;
   background-color: aliceblue;
 }
 
@@ -21,6 +22,21 @@
   border-radius: 10px;
   background-color: var(--bg-navbar-color);
   box-shadow: 20px 20px 50px 10px pink inset;
+  display: flex;
+  justify-content: space-between;
+}
+
+.close-btn {
+  margin-right: 2px;
+  border: 1px solid brown;
+  padding: 0 3px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.close-btn:hover {
+  /* background: white; */
+  transform: scale(0.95);
 }
 
 .ingredient-confirm {
