--- a/client/src/components/topBar/topbar.css
+++ b/client/src/components/topBar/topbar.css
@@ -56,6 +56,23 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  color: black;
+}
+
+.topbar-post-view > div > * {
+  margin: 0 3px;
+  color: black;
+  transition: 0.3s all 1px ease-in;
+  /* border-radius: ; */
+  /* color: brown; */
+  /* border: 1px solid transparent; */
+}
+
+.topbar-post-view > div > :hover .fa-icon {
+  /* border: 1px dotted red; */
+  color: rgb(78, 78, 82);
+  /* background-color: black; */
+  /* background: rgb(113, 108, 108); */
 }
 
 .topbar-search {
@@ -65,7 +82,6 @@
   align-items: center;
   position: relative;
   top: 0;
-  /* border: 1px solid black; */
 }
 
 #searchbar {
@@ -100,6 +116,7 @@
 .bell-icon,
 .messanger-icon {
   position: relative;
+  margin: 0 4px;
 }
 
 .notification-num,
@@ -117,6 +134,7 @@
   justify-content: center;
   border-radius: 50%;
   background-color: rgb(31, 212, 31);
+  /* margin: 0 3px; */
 }
 
 /*  */
@@ -124,10 +142,19 @@
 @media screen and (max-width: 700px) {
   .topbar-search {
     /* position: relative; */
+    margin-top: 5px;
     transition: all 0.5s ease-in-out;
   }
-  .topbar-post-view {
+  .topbar-post-view > div > *:not(:first-child) {
     display: none;
+    border: 1px solid black;
+  }
+
+  .hompage-icon {
+    /* position: absolute; */
+    /* left: 50%; */
+    /* border: 1px solid black; */
+    /* flex: 1; */
   }
   #searchbar {
     /* display: none; */
