start with stars

--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -130,3 +130,13 @@
 li {
   list-style: none;
 }
+
+/* stars */
+.stars-container {
+  width: 60%;
+  margin: auto;
+  padding: 2rem;
+  display: flex;
+  /* border: 1px solid black; */
+  justify-content: center;
+}
