--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -88,6 +88,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
   /* padding-top: 5px; */
 }
 
@@ -139,4 +140,32 @@ li {
   display: flex;
   /* border: 1px solid black; */
   justify-content: center;
+}
+
+.show-votersLength {
+  display: none;
+  font-size: 1rem;
+  position: absolute;
+  top: -20px;
+  left: 20px;
+  background-color: black;
+  color: white;
+  padding: 2px 3px;
+  border-radius: 5px;
+}
+
+.show-votersLength::after {
+  content: "";
+  position: absolute;
+  left: calc(50% - 2.5px);
+  bottom: -2px;
+  width: 5px;
+  height: 5px;
+  background-color: black;
+  transform: rotate(45deg);
+}
+
+.post-rate:hover .show-votersLength {
+  display: block;
+  /* background-color: red; */
 }
